--- a/src/Utils/PrimaryButton/PrimaryButton.css
+++ b/src/Utils/PrimaryButton/PrimaryButton.css
@@ -1,3 +1,9 @@
 button {
-  padding: 20px 0;
+  padding: 10px 50px;
+  border-radius: 100px;
+  font-size: 20px;
+  font-family: "Karantina-Light";
+  color: white;
+  background-color: transparent;
+  border: 1px white solid;
 }
