--- a/src/Utils/PrimaryButton/PrimaryButton.css
+++ b/src/Utils/PrimaryButton/PrimaryButton.css
@@ -6,4 +6,27 @@ button {
   color: white;
   background-color: transparent;
   border: 1px white solid;
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
+}
+
+button::after {
+  content: "";
+  position: absolute;
+  /* border-radius: 100px; */
+  width: 100%;
+  height: 0;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  transition: height 0.3s ease;
+  z-index: -1;
+}
+button:hover::after {
+  height: 100%;
+}
+
+button:hover {
+  color: black;
 }
