--- a/src/Features/LandingPage/Components/NavigationBar.css
+++ b/src/Features/LandingPage/Components/NavigationBar.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 40px;
+  padding: 30px 40px;
   background-color: transparent;
   color: white;
   position: fixed;
@@ -28,8 +28,30 @@
   color: white;
   font-size: 18px;
   transition: color 0.3s ease;
+
+  text-align: center;
+  display: inline-block;
+  padding: 10px 0px;
+  cursor: pointer;
+  letter-spacing: 2px;
+  position: relative;
+  overflow: hidden;
+  margin: 0 20px;
 }
 
-.nav-links li a:hover {
-  color: #00ffd5;
+.nav-links li a:before {
+  content: "";
+  position: absolute;
+  width: 0;
+  background: #fff;
+  left: 0;
+  height: 2px;
+  bottom: 0;
+  transition: all 0.3s;
+  opacity: 0.7;
+}
+
+.nav-links li a:hover:before {
+  width: 100%;
+  left: 0;
 }
