--- a/src/Features/LandingPage/Components/RecentSection.css
+++ b/src/Features/LandingPage/Components/RecentSection.css
@@ -46,13 +46,14 @@
   text-transform: uppercase;
   font-size: 30px;
   margin-bottom: 10px;
+  font-weight: lighter;
 }
 
-.blog-content p{
-    letter-spacing: 1px;
-    font-size: 20px;
-    margin-bottom: 30px;
-    text-align: justify;
+.blog-content p {
+  letter-spacing: 1px;
+  font-size: 20px;
+  margin-bottom: 30px;
+  text-align: justify;
 }
 
 .blogs img {
