--- a/src/Features/LandingPage/Components/RecentSection.css
+++ b/src/Features/LandingPage/Components/RecentSection.css
@@ -16,7 +16,13 @@
   display: flex;
   flex-direction: row;
   overflow-x: auto;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
 }
+
+.blogs::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera */
+  }
 
 .blog-item {
   display: flex;
