--- a/src/Features/LandingPage/Components/InfoSection.css
+++ b/src/Features/LandingPage/Components/InfoSection.css
@@ -34,7 +34,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: 20px;
 }
 .info-content h1 {
   margin-top: -75px;
@@ -45,6 +44,38 @@
   font-size: 150px;
   text-transform: uppercase;
   justify-self: center;
+}
+
+.info-content p {
+  font-size: 20px;
+}
+
+.title-block .type-writer{
+  display: inline-block;
+  overflow: hidden;
+  border-right: 2px solid white;
+  white-space: nowrap;
+  animation: typing 4s steps(60, end) forwards, blink 0.7s step-end infinite;
+  max-width: 100%;
+}
+
+@keyframes typing {
+  from {
+    max-width: 0;
+  }
+  to {
+    max-width: 100%;
+  }
+}
+
+@keyframes blink {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: white;
+  }
 }
 
 /* img {
