--- a/src/Features/LandingPage/Components/RecentSection.css
+++ b/src/Features/LandingPage/Components/RecentSection.css
@@ -31,6 +31,22 @@
   display: flex;
 }
 
+.tech-item-animation{
+  transform: translateY(20px);
+  animation: initial-card-animation 0.6s ease forwards;
+}
+
+.tech-item-animatin:nth-child(2) { animation-delay: 0.2s; }
+.tech-item-animatin:nth-child(3) { animation-delay: 0.4s; }
+.tech-item-animatin:nth-child(4) { animation-delay: 0.6s; }
+
+@keyframes initial-card-animation{
+  to{
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .tech-heading {
   display: flex;
   align-items: center;
