--- a/src/Features/LandingPage/Components/RecentSection.css
+++ b/src/Features/LandingPage/Components/RecentSection.css
@@ -36,9 +36,10 @@
   animation: initial-card-animation 0.6s ease forwards;
 }
 
-.tech-item-animatin:nth-child(2) { animation-delay: 0.2s; }
-.tech-item-animatin:nth-child(3) { animation-delay: 0.4s; }
-.tech-item-animatin:nth-child(4) { animation-delay: 0.6s; }
+.tech-item-animation:nth-child(1) { animation-delay: 0.2s; }
+.tech-item-animation:nth-child(2) { animation-delay: 0.4s; }
+.tech-item-animation:nth-child(3) { animation-delay: 0.6s; }
+.tech-item-animation:nth-child(4) { animation-delay: 0.8s; }
 
 @keyframes initial-card-animation{
   to{
