--- a/src/Features/LandingPage/Components/FooterSection.css
+++ b/src/Features/LandingPage/Components/FooterSection.css
@@ -9,7 +9,7 @@ footer {
   background-color: #d9d9d974;
   width: 90vw;
   border-radius: 25px;
-  padding: 50px 0 20px 0;
+  padding: 50px 0 40px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,7 +20,16 @@ footer {
     text-transform: uppercase;
 }
 
+footer .social {
+    display: flex;
+    gap: 30px;
+}
 footer .social a img {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
+}
+
+footer h6{
+    font-size: 20px;
+    margin-top: 20px;
 }
