--- a/src/Features/LandingPage/Components/FooterSection.css
+++ b/src/Features/LandingPage/Components/FooterSection.css
@@ -14,6 +14,12 @@ footer {
   flex-direction: column;
   align-items: center;
   gap: 30px;
+  transition: all 0.4s ease-in;
+  transition-delay: 0.3s;
+}
+
+.footer-container-initial-animation{
+  transform: translateY(20px);
 }
 
 .footer-container h1{
