--- a/src/Features/LandingPage/Components/HeroSection.css
+++ b/src/Features/LandingPage/Components/HeroSection.css
@@ -37,3 +37,9 @@
   font-size: 20px;
   margin-bottom: 40px;
 }
+
+@media (max-width: 500px) {
+  .hero-container .content h1 {
+    font-size: 100px;
+  }
+}
