--- a/src/Features/LandingPage/Components/InfoSection.css
+++ b/src/Features/LandingPage/Components/InfoSection.css
@@ -30,6 +30,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-content: space-between;
   align-items: center;
   position: relative;
   padding-bottom: 20px;
@@ -39,10 +40,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
+
 .info-content h1 {
   margin-top: -75px;
-  /* width: 80vw; */
   -webkit-text-stroke: 0.5px white;
   font-weight: lighter;
   color: transparent;
@@ -55,67 +57,11 @@
   font-size: 20px;
 }
 
-.title-block .type-writer {
-  display: inline-block;
-  overflow: hidden;
-  border-right: 2px solid white;
-  white-space: nowrap;
-  animation: typing 4s steps(60, end) forwards, blink 0.7s step-end infinite;
-  max-width: 100%;
-}
-
-@keyframes typing {
-  from {
-    max-width: 0;
+@media (max-width: 500px) {
+  .title-block{
+    width: 70vw;
   }
-  to {
-    max-width: 100%;
+  .title-block h1 {
+    font-size: 100px;
   }
 }
-
-@keyframes blink {
-  from,
-  to {
-    border-color: transparent;
-  }
-  50% {
-    border-color: white;
-  }
-}
-
-/* img {
-  align-self: center;
-  height: 75vh;
-}
-
-.info-content {
-  margin-top: 20vh;
-  align-self: center;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  width: 100%;
-  padding: 20px;
-  padding-right: 220px;
-  box-sizing: border-box;
-}
-
-.line {
-  width: 100%;
-  max-width: 200px;
-  height: 0.5px;
-  background-color: white;
-  margin: 20px 40px;
-}
-
-.info h6 {
-  font-size: 46px;
-  text-transform: uppercase;
-}
-
-.info p {
-  font-size: 20px;
-  letter-spacing: 1px;
-  margin: 40px 0;
-  text-align: justify;
-} */
