--- a/src/Features/LandingPage/Components/RecentSection.css
+++ b/src/Features/LandingPage/Components/RecentSection.css
@@ -13,6 +13,7 @@
   text-transform: uppercase;
   justify-self: center;
   margin-bottom: 80px;
+  text-align: center;
 }
 
 .techs {
@@ -20,8 +21,7 @@
   display: flex;
   flex-direction: row;
   overflow-x: auto;
-  gap: 80px; /* spacing between cards */
-  /* padding: 0 40px; */
+  gap: 80px;
   scrollbar-width: none;
   -ms-overflow-style: none;
 }
@@ -110,4 +110,22 @@
 .tech-item:hover img {
   transform: scale(1.1);
   filter: brightness(1.15) contrast(1.05);
+}
+
+@media (max-width: 500px) {
+  .recent-container h1 {
+    font-size: 100px;
+  }
+  .techs {
+    padding: 0 40px;
+    gap: 40px;
+  }
+  .tech-content {
+    margin: 20px 0;
+  }
+  .tech-item img {
+    margin-right: 20px;
+    width: 300px;
+    height: 265px;
+  }
 }
