--- a/src/Features/LandingPage/Components/FooterSection.css
+++ b/src/Features/LandingPage/Components/FooterSection.css
@@ -26,6 +26,10 @@ footer {
     text-transform: uppercase;
 }
 
+.footer-container p{
+  text-align: center;
+}
+
 footer .social {
     display: flex;
     gap: 30px;
