Before initializing tailwind

--- a/src/Features/LandingPage/Components/InfoSection.css
+++ b/src/Features/LandingPage/Components/InfoSection.css
@@ -10,7 +10,7 @@
 .info-container .bg-image {
   margin-top: 80px;
   align-self: center;
-  background-image: url("C:\Users\BEST TECH\Desktop\react knowledge\astro_website\src\Assets\Images\earth_in_out.jpg");
+  background-image: url("C:\Users\BEST TECH\Desktop\react knowledge\blue_planet\src\Assets\Images\earth_in_out.jpg");
   background-size: cover;
   background-position: center;
   width: 80vw;
