--- a/src/Utils/PrimaryButton/PrimaryButton.css
+++ b/src/Utils/PrimaryButton/PrimaryButton.css
@@ -1,4 +1,4 @@
-button {
+.primary-button {
   padding: 10px 50px;
   border-radius: 100px;
   font-size: 20px;
@@ -11,7 +11,7 @@ button {
   z-index: 0;
 }
 
-button::after {
+.primary-button::after {
   content: "";
   position: absolute;
   /* border-radius: 100px; */
@@ -23,10 +23,10 @@ button::after {
   transition: height 0.3s ease;
   z-index: -1;
 }
-button:hover::after {
+.primary-button:hover::after {
   height: 100%;
 }
 
-button:hover {
+.primary-button:hover {
   color: black;
 }
