Exploration section created

--- a/src/Features/HomePage/Components/HomePage.css
+++ b/src/Features/HomePage/Components/HomePage.css
@@ -18,7 +18,11 @@
     filter: blur(20px);
     -webkit-filter: blur(15px);
     transform: scale(1.1);
-    /* z-index: -1; */
+    z-index: -1;
   }
   
-
+.home-section .home-nav-bar{
+    height: 100px;
+    width: 100vw;
+    background-color: blue;
+}
