--- a/src/Features/HomePage/Components/Exploration.css
+++ b/src/Features/HomePage/Components/Exploration.css
@@ -6,9 +6,14 @@
 }
 
 .exploration-gallery .gallery-img{
-    background-color: blue;
-    width: calc(100% - 0px);
+    width: 100%;
     display: block;
     border-radius: 25px;
     margin: 7.5px 0;
+    transition: transform ease-out 0.3s;
+    cursor: pointer;
+}
+
+.exploration-gallery .gallery-img:hover{
+    transform: scale(0.9);
 }
