--- a/src/Features/HomePage/Components/HomeMenu.css
+++ b/src/Features/HomePage/Components/HomeMenu.css
@@ -9,5 +9,24 @@
     width: 50px;
     height: 50px;
     border: 15px black solid;
-    border-radius: 60px;
+    border-radius: 50px;
+}
+
+.home-menu .navigation{
+    margin: 0 50px;
+    background-color: white;
+    height: 50px;
+    width: 200px;
+    border-radius: 50px;
+    padding: 0 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: bold;
+}
+
+.home-menu .navigation a{
+    color: black;
+    text-decoration: none;
+    text-transform: uppercase;
 }
