--- a/src/Utils/LandingButton/LandingButton.css
+++ b/src/Utils/LandingButton/LandingButton.css
@@ -1,4 +1,4 @@
-.primary-button {
+.landing-button {
   padding: 10px 50px;
   border-radius: 100px;
   font-size: 20px;
@@ -9,9 +9,10 @@
   position: relative;
   overflow: hidden;
   z-index: 0;
+  cursor: pointer;
 }
 
-.primary-button::after {
+.landing-button::after {
   content: "";
   position: absolute;
   /* border-radius: 100px; */
@@ -23,10 +24,10 @@
   transition: height 0.3s ease;
   z-index: -1;
 }
-.primary-button:hover::after {
+.landing-button:hover::after {
   height: 100%;
 }
 
-.primary-button:hover {
+.landing-button:hover {
   color: black;
 }
