--- a/src/Features/LandingPage/Components/NavigationBar.css
+++ b/src/Features/LandingPage/Components/NavigationBar.css
@@ -6,7 +6,7 @@
   background-color: transparent;
   color: white;
   position: fixed;
-  width: calc(100% - 80px);
+  width: 100%;
   top: 0;
   left: 0;
   z-index: 10;
