--- a/src/Features/DetailPage/Components/DetailPage.css
+++ b/src/Features/DetailPage/Components/DetailPage.css
@@ -1,3 +1,12 @@
-.detail-container{
+.details-section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.details-container{
     background-color: blue;
+    width: 80vw;
+    height: 90vh;
+    border-radius: 25px;
+    overflow: hidden;
 }
