Detail description container is good

--- a/src/Features/DetailPage/Components/DetailPage.css
+++ b/src/Features/DetailPage/Components/DetailPage.css
@@ -1,45 +1,49 @@
 .details-section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .details-container {
-    position: relative;
-    background-color: blue;
-    width: 80vw;
-    height: 90vh;
-    border-radius: 25px;
-    overflow: hidden;
-  }
-  
-  .details-container .detailed-image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: 0;
-  }
-  
-  .details-container .details-content {
-    height: 100%;
-    position: relative;
-    z-index: 1;
-    padding: 25px;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-content: space-between;
-    justify-content: space-between;
-  }
-  
-  .details-content .details-header{
-    display: flex;
-    justify-content: space-between;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-  .details-content .details-description{
-    background-color: blue;
-  }
+.details-container {
+  position: relative;
+  background-color: blue;
+  width: 80vw;
+  height: 90vh;
+  border-radius: 25px;
+  overflow: hidden;
+}
+
+.details-container .detailed-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 0;
+}
+
+.details-container .details-content {
+  height: 100%;
+  position: relative;
+  z-index: 1;
+  padding: 25px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
+  justify-content: space-between;
+}
+
+.details-content .details-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.details-content .details-description {
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
+  border-radius: 15px;
+  padding: 25px;
+}
